minor edits throughout; new fig 1

--- a/writing/_cogsci2016/habituals-cogsci2016.bib
+++ b/writing/_cogsci2016/habituals-cogsci2016.bib
@@ -47,7 +47,7 @@
 
 @inproceedings{Degen2014, 
   author = {Degen, Judith and Goodman, Noah D.}, 
-  booktitle = {Proceedings of the Thirty-Sixth Annual Conference of the {C}ognitive {S}cience {S}ociety}, 
+  booktitle = {Proceedings of the 36th Annual Conference of the {C}ognitive {S}cience {S}ociety}, 
   title = {Lost your marbles? The puzzle of dependent measures in experimental pragmatics}, year = {2014} 
 }
 
