--- a/writing/_cogsci2016/habituals-cogsci2016.tex
+++ b/writing/_cogsci2016/habituals-cogsci2016.tex
@@ -158,23 +158,13 @@ This has important implications about the relationship between linguistic genera
 %\ndg{since generics isn't out, it is better to talk about this as: we introduce a model building on lassiter\&goodman, which is almost the same as one we have evaluated for generics.}
 
 A habitual sentence expresses a generalization about the tendency of an individual to participate in a kind of event.
-%\footnote{We articulate the formalization in terms of individuals, but the theory applies straightforwardly to events without actors (e.g \emph{It rains around here.}).}.
 For a given individual (e.g.~\textsc{Bill}) and an event or behavior (e.g.~\textsc{smoking}), we refer to the rate at which the individual participates in the event for a given time window  
-%that is $ \lambda_{t} = \int_{t} \mathbbm{1}_{I \in E}dt$, 
 as the \emph{propensity}, denoted  $\lambda$.
-%\ndg{maybe it's better to talk about the underlying scale as a rate? what's up with the ** in the integral here?}
-%
 A natural denotation for the habitual is a simple threshold on propensity $\lambda > \tau$ \cite<c.f.>{Cohen1999}, yet no fixed value for $\tau$ would lead to the observed flexibility of truth conditions (e.g. \emph{Bill smokes} vs. \emph{writes novels}).
 Building on \citeA{Lassiter2013,Lassiter2015}, we posit that this threshold is not a fixed property of the language, but is established by pragmatic inference.
 
 We model a speaker $S_2$ who reasons about a pragmatic listener $L_1$; this listener is considering the propensity of a certain behavior of an individual.
-The listener $L_1$ has uncertainty about the appropriate threshold for the habitual in this context, and reasons about what an informative speaker $S_1$ would be likely to say. The hypothetical speaker $S_1$ in turn reasons about an idealized literal listener $L_0$, who has access to the threshold $\tau$ (i.e. $S_1$ believes $L_0$ will interpret him in exactly the way he means). 
-%$S_2$ ultimately decides whether to produce the habitual or stay silent (i.e.~produce a \emph{null} utterance that has no information content).
-%
-%\ndg{are you sure we want to call this subjective frequency? i think this is going to garden path people, since expt 3 is specifically making the point that it isn't frequency. how about propensity, which we define as subjective probability that I will do B in the next time window?}
-%It is not clear at this point whether this frequency is a retrospective (how often has Bill smoked in the past) or a prospective frequency (how often to I expect Bill to smoke in the future); for the time being, we assume time is \emph{homogenous} with respect to past and present (i.e. however often Bill has smoked in the past will be how often he smokes in the future). 
-%This inference depends on event and person knowledge, but otherwise follows from a general mechanism of language.
-%We imagine a hypothetical, pragmatic listener ($L_1$) concerned with learning
+The listener $L_1$ has uncertainty about the appropriate threshold for the habitual in this context ($\tau \sim \text{Uniform}$ over possible frequencies), and reasons about what an informative speaker $S_1$ would be likely to say. The hypothetical speaker $S_1$ in turn reasons about an idealized literal listener $L_0$, who has access to the threshold $\tau$ (i.e. $S_1$ believes $L_0$ will interpret him in exactly the way he means). 
 Writing the propensity as $\lambda$, this leads to a set of equations:
 \begin{eqnarray}
 P_{S_{2}}(u \mid \lambda) & \propto &  \int_{\tau} P_{L_{1}}(\lambda , \tau \mid u) \label{eq:S2}\\
@@ -185,6 +175,7 @@ P_{L_{0}}(\lambda \mid u, \tau) &\propto& {\delta_{\denote{u}(\lambda, \tau)} P(
 We take the pragmatic speaker $S_2$ to consider two utterances: the habitual, with $\denote{u}(\lambda, \tau) := \lambda>\tau$, or nothing (staying silent), with $\denote{u}(\lambda, \tau) := \text{True}$.
 Equation \ref{eq:S2} can then be interpreted as a model of felicity or truth judgments \cite{Degen2014, TesslerUnderReview}.
 The speaker will choose to produce the habitual when the true propensity $\lambda$ is more likely under $L_1$'s posterior given the habitual than under her prior (implied by $S_2$ ``staying silent''). 
+A fully implemented version of the model can be found at \url{http://forestdb.org/models/habituals-cogsci2016.html}.
 %Critically, speaker $S_{2}$ doesn't have a particular meaning of the habitual in mind (i.e. doesn't have access to the threshold $\tau$), but knows that $L_{1}$ will consider it, and integrates over the likely values she'll consider.
 %This model is nearly identical with the model we have proposed for generic language \cite{TesslerUnderReview}, with the only difference being the underlying degree scale----\emph{propensity} of a behavior vs. \emph{prevalence} of a property. 
 
@@ -275,9 +266,14 @@ The experiment in full can be viewed at \url{http://stanford.edu/~mtessler/habit
 
 \begin{figure*}[t]
 \centering
-  \includegraphics[width=0.8\textwidth]{tj-scatters}
-  \caption{Human acceptability judgments as a function of the log frequency of action (left) and speaker $S_2$ model predictions (right) for ninety-three unique items (event \textsc{x} frequency). 
-  Color denotes target-individual frequency of action (log scale), with lighter colors indicating more frequent actions. Error bars correspond to 95\% bootstrapped confidence intervals for the participant data and 95\% Bayesian credible intervals for the model predictions. Error bars suppressed and points jittered on left facet for visual clarity.}
+  \includegraphics[width=0.8\textwidth]{tj-scatters-3}
+  \caption{
+  Human acceptability judgments as a function of the log frequency of action (left) and speaker $S_2$ model predictions (right) for ninety-three unique items (event \textsc{x} frequency). 
+  Color denotes target-individual frequency of action (log scale), with lighter colors indicating more frequent actions. 
+  Actual frequency noted on x-axis for examples (left).
+  Error bars correspond to 95\% bootstrapped confidence intervals for the participant data and 95\% Bayesian credible intervals for the model predictions. 
+  Error bars suppressed and points jittered on left facet for visual clarity.
+  }
   \label{fig:tjScatters}
 \end{figure*}
 
